# cccl

./: .gersemirc
c2h/include/c2h/: catch2_test_helper.h
ci/: matrix.yaml  run_cpu_target.sh  run_gpu_target.sh  upload_cub_test_artifacts.sh
ci/util/cmake_registration_replay/: README.md  run.sh  shims.cmake
cmake/: CCCLGetDependencies.cmake
cub/benchmarks/bench/reduce/: arg_extrema.cu  base.cuh  deterministic.cu  nondeterministic.cu
cub/benchmarks/bench/segmented_reduce/: base.cuh
cub/benchmarks/bench/transform_reduce/: sum.cu
cub/cub/agent/: agent_batch_memcpy.cuh  agent_merge.cuh  agent_radix_sort_histogram.cuh  agent_radix_sort_onesweep.cuh
cub/cub/block/: block_load.cuh  block_store.cuh
cub/cub/device/: device_reduce.cuh  device_select.cuh
cub/cub/device/dispatch/: dispatch_batch_memcpy.cuh  dispatch_merge.cuh  dispatch_radix_sort.cuh  dispatch_reduce.cuh  dispatch_reduce_deterministic.cuh  dispatch_reduce_nondeterministic.cuh  dispatch_select_if.cuh
cub/test/: CMakeLists.txt  catch2_test_device_find.cu  catch2_test_device_find_bound_sorted_values.cu  catch2_test_device_histogram.cu  catch2_test_device_memcpy_batched.cu  catch2_test_device_merge.cu  catch2_test_device_merge_sort.cu  catch2_test_device_radix_sort_keys.cu  catch2_test_device_radix_sort_pairs.cu  catch2_test_device_reduce_deterministic.cu  catch2_test_device_reduce_env.cu  catch2_test_device_reduce_env_api.cu  catch2_test_device_reduce_nondeterministic.cu  catch2_test_device_scan_large_offsets.cu  catch2_test_device_segmented_radix_sort_keys.cu  catch2_test_device_segmented_radix_sort_pairs.cu  catch2_test_device_segmented_reduce_env.cu  catch2_test_device_segmented_sort_keys.cu  catch2_test_device_segmented_sort_pairs.cu  catch2_test_device_segmented_topk_pairs.cu  catch2_test_device_select_if.cu  catch2_test_device_select_unique_by_key_env.cu  catch2_test_device_transform.cu  run_test.cmake
cub/test/cmake/: CubTestFootprints.cmake  CubTestRegistration.cmake
cudax/test/stf/: CMakeLists.txt
cudax/test/stf/green_context/: gc_grid.cu  gc_grid_green_ctx_data_place.cu
docs/: objects.inv
docs/cub/: tuning.rst
docs/unstable/: 404_helper.html  cpp.html  genindex.html  index.html  pagelist.txt  py-modindex.html  search.html
docs/unstable/cccl/: 3.0_migration_guide.html  config_macros.html  contributing.html  determinism.html  license.html  tma.html
docs/unstable/cccl/contributing/: code_of_conduct.html
docs/unstable/cccl/development/: build_and_bisect_tools.html  index.html  macro.html  testing.html  visibility.html
docs/unstable/cub/: api.html  benchmarking.html  determinism.html  developer_overview.html  index.html  policy_selectors.html  test_overview.html  tuning.html
docs/unstable/cub/api/: block.html  classcub_1_1ArgIndexInputIterator.html  classcub_1_1BlockAdjacentDifference.html  classcub_1_1BlockDiscontinuity.html  classcub_1_1BlockExchange.html  classcub_1_1BlockHistogram.html  classcub_1_1BlockLoad.html  classcub_1_1BlockMergeSort.html  classcub_1_1BlockMergeSortStrategy.html  classcub_1_1BlockRadixRank.html  classcub_1_1BlockRadixRankMatch.html  classcub_1_1BlockRadixSort.html  classcub_1_1BlockReduce.html  classcub_1_1BlockRunLengthDecode.html  classcub_1_1BlockScan.html  classcub_1_1BlockShuffle.html  classcub_1_1BlockStore.html  classcub_1_1CacheModifiedInputIterator.html  classcub_1_1CacheModifiedOutputIterator.html  classcub_1_1GridQueue.html  classcub_1_1SwizzleScanOp.html  classcub_1_1WarpExchange.html  classcub_1_1WarpLoad.html  classcub_1_1WarpMergeSort.html  classcub_1_1WarpReduce.html  classcub_1_1WarpReduceBatched.html  classcub_1_1WarpScan.html  classcub_1_1WarpStore.html  device.html  grid.html  index.html  iterator.html  macro__cublog.html  macro_cub_debug_all.html  macro_cub_debug_log.html  macro_cub_debug_sync.html  macro_cub_disable_kernel_visibility_warning_suppression.html  macro_cub_major_version.html  macro_cub_minor_version.html  macro_cub_namespace_begin.html  (+137 more)
docs/unstable/cub/api_docs/: block_wide.html  device_topk_requirements.html  device_wide.html  thread_level.html  warp_wide.html
docs/unstable/cub/developer/: block_scope.html  device_scope.html  nvtx.html  thread_level.html  warp_level.html
docs/unstable/cudax/: container.html  graph.html  index.html  memory_resource.html  places.html  stf.html
docs/unstable/cudax/api/: classcuda_1_1experimental_1_1graph__buffer.html  classcuda_1_1experimental_1_1logical__device.html  classcuda_1_1experimental_1_1places_1_1blocked__partition__custom.html  classcuda_1_1experimental_1_1places_1_1cyclic__partition.html  classcuda_1_1experimental_1_1places_1_1cyclic__shape.html  classcuda_1_1experimental_1_1places_1_1data__place.html  classcuda_1_1experimental_1_1places_1_1data__place__affine.html  classcuda_1_1experimental_1_1places_1_1data__place__composite.html  classcuda_1_1experimental_1_1places_1_1data__place__device.html  classcuda_1_1experimental_1_1places_1_1data__place__device__auto.html  classcuda_1_1experimental_1_1places_1_1data__place__host.html  classcuda_1_1experimental_1_1places_1_1data__place__interface.html  classcuda_1_1experimental_1_1places_1_1data__place__invalid.html  classcuda_1_1experimental_1_1places_1_1data__place__managed.html  classcuda_1_1experimental_1_1places_1_1exec__place.html  classcuda_1_1experimental_1_1places_1_1exec__place__cuda__stream__impl.html  classcuda_1_1experimental_1_1places_1_1exec__place__device.html  classcuda_1_1experimental_1_1places_1_1exec__place__device__auto__impl.html  classcuda_1_1experimental_1_1places_1_1exec__place__green__ctx__impl.html  classcuda_1_1experimental_1_1places_1_1exec__place__grid__impl.html  (+260 more)
docs/unstable/libcudacxx/: extended_api.html  index.html  ptx_api.html  runtime.html  setup.html  standard_api.html  tile.html
docs/unstable/maintainers/: backport_process.html  branching_strategy.html  coderabbit.html  index.html
docs/unstable/python/: api_reference.html  compute_api.html  coop.html  coop_api.html  index.html  resources.html  setup.html
docs/unstable/thrust/: api.html  developer_overview.html  index.html
(+892 files in other folders)
